--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SiteRebuild</title>
+  <title>NextOnTop - Cost effective Web and Mobile App Development | NextOnTop</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/ico" href="logo.jpg">
 </head>
 <body>
   <app-root></app-root>
