--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/ico" href="logo.jpg">
+  <link rel="shortcut icon" type="image/ico" href="logo.ico">
 </head>
 <body>
   <app-root></app-root>
